* 삭제: TokenInfo 클래스 제거. Pos 클래스와 통합 * 삭제: Offsets 클래스 제거 * 수정: TokenGenerator에서 TokenInfo의 사용 부분을 제거하고, Pos만 사용하여 token을 반환하도록 로직 변경